[gd_scene load_steps=2 format=3 uid="uid://bbfb4k27hypgp"]

[ext_resource type="Script" path="res://components/smooth_pivot/smooth_pivot.gd" id="1"]

[node name="SmoothPivot" type="Marker2D"]
script = ExtResource("1")

[node name="TweenTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TweenTimer" to="." method="_on_tween_timer_timeout"]
